--- a/SolutionDraft.html
+++ b/SolutionDraft.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BusBing - Bus Stop Tracker App</title>
+    <title>BusBeep - Bus Stop Tracker App</title>
     <script type="module" src="https://unpkg.com/@googlemaps/extended-component-library"></script>
     <gmpx-api-loader key="AIzaSyDnFUPIUS-LBe6a5AeEmbCENx56DPr44Mw" solution-channel="GMP_CCS_autocomplete_v4">
     </gmpx-api-loader>
     <style> 
-        gmp-map 
+        
+		gmp-map 
         { /*map Box */
             height: 500px;
         }
@@ -22,6 +23,7 @@
         {
             color: #fff;
             background-color: #4d90fe;
+			font-family: Verdana, sans-serif;
             font-size: 25px;
             font-weight: 500;
             padding: 6px 12px;
@@ -60,11 +62,15 @@
             display: none; /* hidden at first */
             font-weight: bold; /* makes text stand out */
         }
+		p
+		{
+			font-family: Verdana, sans-serif;
+		}
     </style>
 </head>
 <body>
-    <h1>Bus-stop Finder</h1>
-    <hr>
+    <img src="Logo.png"></img>
+	<hr>
     <p>Use the area below to find a bus-stop you want to track</p>
     <hr>
     <!--bellow map snippet from google maps API webpage-->
