--- a/SolutionDraft.html
+++ b/SolutionDraft.html
@@ -6,70 +6,10 @@
     <script type="module" src="https://unpkg.com/@googlemaps/extended-component-library"></script>
     <gmpx-api-loader key="AIzaSyDnFUPIUS-LBe6a5AeEmbCENx56DPr44Mw" solution-channel="GMP_CCS_autocomplete_v4">
     </gmpx-api-loader>
-    <style> 
-        
-		gmp-map 
-        { /*map Box */
-            height: 500px;
-        }
-        html, body 
-        {
-            height: 100%;
-            width: 100%;
-            margin: 0;
-            padding: 0;
-        }
-        #title 
-        {
-            color: #fff;
-            background-color: #4d90fe;
-			font-family: Verdana, sans-serif;
-            font-size: 25px;
-            font-weight: 500;
-            padding: 6px 12px;
-        }
-        .pac-card 
-        { /* search & radius */
-            background-color: #fff;
-            border-radius: 2px;
-            box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
-            margin: 10px;
-            font: 400 18px Roboto, Arial, sans-serif;
-            overflow: hidden;
-        }
-        #place-picker 
-        { /*search rectangle*/
-            box-sizing: border-box;
-            width: 100%;
-            padding: 0.5rem 1rem 1rem;
-        }
-        #radius-input-container 
-        { 
-            display: flex;
-            align-items: center;
-            padding: 0 1rem 1rem;
-        }
-        #radius-input-label 
-        {
-            margin-right: 0.5rem;
-        }
-        #radius-input 
-        { 
-            width: 50px;
-        }
-        #location-tracking-text 
-        {
-            display: none; /* hidden at first */
-            font-weight: bold; /* makes text stand out */
-        }
-		p
-		{
-			font-family: Verdana, sans-serif;
-		}
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="Logo.png"></img>
+    <img id="logo" src="Logo.png" width: 30%;></img>
 	<hr>
     <p>Use the area below to find a bus-stop you want to track</p>
     <hr>
