--- a/SolutionDraft.html
+++ b/SolutionDraft.html
@@ -7,6 +7,7 @@
     <gmpx-api-loader key="AIzaSyDnFUPIUS-LBe6a5AeEmbCENx56DPr44Mw" solution-channel="GMP_CCS_autocomplete_v4">
     </gmpx-api-loader>
     <link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="icon.ico">
 </head>
 <body>
     <img id="logo" src="Logo.png" width: 30%;></img>
