--- a/SolutionDraft.html
+++ b/SolutionDraft.html
@@ -4,69 +4,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BusBeep - Bus Stop Tracker App</title>
     <script type="module" src="https://unpkg.com/@googlemaps/extended-component-library"></script>
-    <gmpx-api-loader key="AIzaSyDnFUPIUS-LBe6a5AeEmbCENx56DPr44Mw" solution-channel="GMP_CCS_autocomplete_v4">
-    </gmpx-api-loader>
+    <gmpx-api-loader key="AIzaSyDnFUPIUS-LBe6a5AeEmbCENx56DPr44Mw" solution-channel="GMP_CCS_autocomplete_v4"></gmpx-api-loader>
     <link rel="stylesheet" href="styles.css">
-	<script src="mainScript.js"></script>
-	<link rel="icon" href="icon.ico">
+	<link rel="icon" href="Icon.ico">
+    <script src="mainScript.js"></script>
 </head>
 <body>
-    <img id="logo" src="Logo.png" width: 30%;></img>
-	<hr>
+    <img id="logo" src="Logo.png" style="width:30%;"> <!--Bus Beep Logo, designed in photoshop-->
+    <hr>
     <p>Use the area below to find a bus-stop you want to track</p>
     <hr>
-    <!--bellow map snippet from google maps API webpage-->
-    <gmp-map id="map" center="53.79951032401113, -1.5480014734824878" zoom="13" map-id="DEMO_MAP_ID"> <!-- map element provided by the extended conponent library -->
+
+    <!-- Map container -->
+    <gmp-map id="map" center="53.79951032401113, -1.5480014734824878" zoom="13" map-id="DEMO_MAP_ID">
         <div slot="control-block-start-inline-start" class="pac-card" id="pac-card">
-            <div>
-                <div id="title">Bus Alert Location Search</div> 
-                <gmpx-place-picker id="place-picker" for-map="map"></gmpx-place-picker> <!-- place search box-->
-                <div id="radius-input-container"> <!-- Is where the radius input field goes -->
+            <div> <!--Box with Main Functionality (Set, Upload, Export, Favourite)-->
+                <div id="title">Location Search</div> 
+                <gmpx-place-picker id="place-picker" for-map="map"></gmpx-place-picker>
+                <div id="radius-input-container">
                     <label for="radius-input" id="radius-input-label">Radius (m):</label>
                     <input type="number" id="radius-input" value="300">
-					<button id="save">💾</button>
+                    <button id="favourite">💾</button>
                 </div>
-                <button type="button" id="setLocation">Set Location</button>
-				<button type="button" id="upload">Upload Favourites</button>
-				<button type="button" id="fav">Save Favourites</button>
-				
+                <button type="button" id="setLocation">Toggle Tracking</button>    
+                <button type="button" id="download">Save Favourites</button>
+                <button type="button" id="import">Upload Favourites</button>
             </div>
         </div>
-        <gmp-advanced-marker id="marker"></gmp-advanced-marker> <!-- marker for location-->
+        <gmp-advanced-marker id="marker"></gmp-advanced-marker>
     </gmp-map>
+    
+	<!-- Table for favourites and set buttons-->
 	<table>
-		<tr>
-			<th scope="col">Name</th>
-			<th scope="col">Location</th>
-			<th scope="col">Selected</th>
-		</tr>
-		<tr>
-			<td id="location1"></td>
-			<td id="coords1"></td>
-			<td><button type="button" id="selected1">Select</button><td>
-		</tr>
-		<tr>
-			<td id="location2"></td>
-			<td id="coords2"></td>
-			<td><button type="button" id="selected2">Select</button><td>
-		</tr>
-		<tr>
-			<td id="location3"></td>
-			<td id="coords3"></td>
-			<td><button type="button" id="selected3">Select</button><td>
-		</tr>
-		<tr>
-			<td id="location4"></td>
-			<td id="coords4"></td>
-			<td><button type="button" id="selected4">Select</button><td>
-			
-		</tr>
-		<tr>
-			<td id="location5"></td>
-			<td id="coords5"></td>
-			<td><button type="button" id="selected5">Select</button><td>
-		</tr>
-	</table>
-
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Location</th>
+            <th scope="col">Selected</th>
+        </tr>
+        <tr>
+            <td id="location1"></td>
+            <td id="coords1"></td>
+            <td><button type="button" id="selected1">Select</button></td>
+        </tr>
+        <tr>
+            <td id="location2"></td>
+            <td id="coords2"></td>
+            <td><button type="button" id="selected2">Select</button></td>
+        </tr>
+        <tr>
+            <td id="location3"></td>
+            <td id="coords3"></td>
+            <td><button type="button" id="selected3">Select</button></td>
+        </tr>
+        <tr>
+            <td id="location4"></td>
+            <td id="coords4"></td>
+            <td><button type="button" id="selected4">Select</button></td>
+        </tr>
+        <tr>
+            <td id="location5"></td>
+            <td id="coords5"></td>
+            <td><button type="button" id="selected5">Select</button></td>
+        </tr>
+    </table>
 </body>
 </html>
