Added Info Section

--- a/BusBeep.html
+++ b/BusBeep.html
@@ -13,6 +13,7 @@
     <img id="logo" src="Logo.png" alt="BusBeep Logo">
     <hr>
     <p>Use the area below to find a bus-stop you want to track</p>
+    <button onclick="location.href='Info.html'">What is this?</button>
     <hr>
     <!--Map box containing all the locations and search box-->
     <gmp-map id="map" center="53.79951032401113, -1.5480014734824878" zoom="13" map-id="DEMO_MAP_ID">
