--- a/info.html
+++ b/info.html
@@ -11,10 +11,10 @@
 <body>
 
   <h1>What is Bus Beep?</h1>
-  <p>This NEA project is my way to make sure that you never miss a bus stop again, alerting you whenever you enter the radius of your destination and ensuring that you aren’t dozing when it’s time to get off the bus!</p>
+  <p>This NEA project is my way of making sure that you never miss a bus stop again, alerting you whenever you enter the radius of your destination and ensuring that you aren’t dozing when it’s time to get off the bus!</p>
 
   <h1>How do I use Bus Beep?</h1>
-  <p>Simply enter the name of the bus stop you want to get off at, or the rough location, into the placefinder field. Then set a radius, or leave it blank for the recommended distance for an alert, and press "Toggle Tracking". This will monitor your location and eventually alert you when arriving at the location. You can also save locations which you might commonly use into a table, and later export/import them locally.</p>
-  <button onclick="location.href='BusBeep.html'">Go Back</button>
+  <p>Simply enter the name of the bus stop you want to get off at or the rough location into the placefinder field. Then set a radius, or leave it blank for the recommended distance for an alert, and press "Toggle Tracking". This will monitor your location and eventually alert you when arriving at the location. You can also save locations which you might commonly use into a table, and later export/import them locally.</p>
+  <button onclick="location.href='SolutionDraft.html'">Go Back</button>
 </body>
 </html>
