--- a/Info.html
+++ b/Info.html
@@ -15,6 +15,6 @@
 
   <h1>How do I use Bus Beep?</h1>
   <p>Simply enter the name of the bus stop you want to get off at or the rough location into the placefinder field. Then set a radius, or leave it blank for the recommended distance for an alert, and press "Toggle Tracking". This will monitor your location and eventually alert you when arriving at the location. You can also save locations which you might commonly use into a table, and later export/import them locally.</p>
-  <button onclick="location.href='SolutionDraft.html'">Go Back</button>
+  <button onclick="location.href='https://joshuaframptonunofficial.github.io/BusBeep'">Go Back</button>
 </body>
 </html>
